RESOLVED FIXED101778
[BlackBerry] When opening an image it does not scale to fit our window
https://bugs.webkit.org/show_bug.cgi?id=101778
Summary [BlackBerry] When opening an image it does not scale to fit our window
Jacky Jiang
Reported 2012-11-09 11:27:31 PST
PR: 230935.
Attachments
Patch (3.26 KB, patch)
2012-11-12 13:55 PST, Jacky Jiang
rwlbuis: review+
Jacky Jiang
Comment 1 2012-11-12 13:55:35 PST
Rob Buis
Comment 2 2012-11-12 14:01:45 PST
Comment on attachment 173716 [details] Patch LGTM.
Jacky Jiang
Comment 3 2012-11-12 14:51:36 PST
Konrad Piascik
Comment 4 2012-11-13 05:18:41 PST
Jacky Jiang
Comment 5 2012-11-13 07:32:14 PST
(In reply to comment #4) > (In reply to comment #3) > > Committed r134308: <http://trac.webkit.org/changeset/134308> > > It's actually http://trac.webkit.org/changeset/134304 Yeah, thanks! The mark-bug-fixed script didn't work as expected...
Note You need to log in before you can comment on or make changes to this bug.